Still trying to update state after getting new symbol

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.22.2",
     "react": "^16.0.0-alpha.5",
     "react-dom": "^16.0.0-alpha.5",
+    "regenerator-runtime": "^0.12.0",
     "robinhood": "^1.4.0",
     "victory": "^0.27.2"
   },
