--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xCharts",
+  "name": "xcharts",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase-tools": "^3.19.3",
     "moment": "^2.22.2",
     "react": "^16.0.0-alpha.5",
     "react-dom": "^16.0.0-alpha.5",
